--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assignment 1</title>
+    <link rel="icon" type="image/x-icon" href="/assets/home.png">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -11,7 +12,7 @@
      <header>
         <nav class="Nav-container container">
            <div class="nav_img">
-            <img src="/assets/logo-navbar.png" alt=""></div> 
+            <img src="assets/logo-navbar.png" alt=""></div> 
            <div>
         <ul class="Nav-features">
             <li>Features</li>
@@ -19,7 +20,7 @@
             <li>Why it's Different</li>
         </ul>
            </div>
-           <div>
+           <div>                                         
             <button class="nav_btn">Get Eearly Access</button>
            </div>
         </nav>
