create brain section disign css added picture

--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Assignment 1</title>
    <link rel="icon" type="image/x-icon" href="/assets/home.png">
+
    <link rel="stylesheet" href="style.css">
+
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
       integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
       crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -69,7 +71,8 @@
    <section class="container">
       <div class="note_sec_title">
          <h1>Notes Don't fail, Structure Does.</h1>
-         <p class="font_size">You're not bad at learning. Your tools just weren't built for how knowledge actually works.</p>
+         <p class="font_size">You're not bad at learning. Your tools just weren't built for how knowledge actually
+            works.</p>
       </div>
       <div class="card-container">
          <div class="box_shadow">
@@ -98,7 +101,35 @@
 
    </section>
    <!-- Note section ended -->
-    
+   <!-- Brain section started  -->
+   <section>
+      <div class="brain_container container display_flex">
+         <div>
+            <img src="assets/knowledge.png" alt="">
+         </div>
+         <div>
+            <h4 class="brain_title">THE SOLUTION </h4>
+            <h1 class="disgin-title">Your second brain,<br>
+               structured by design.</h1>
+            <p class="font_size">Personal Knowledge Vault isn't another note-taking app.z <br>It's a thinking
+               environment where every note,
+               link, and summary <br>becomes part of an interconnected web of understanding.</p>
+
+            <div class="brain-ChekCircle">
+               <h4 class="chekchircle-display_flex margin-bottom"><img src="assets/CheckCircle.png" alt="">Capture ideas
+                  with structure built-in from day one</h4>
+               <h4 class=" chekchircle-display_flex margin-bottom"><img src="assets/CheckCircle.png" alt="">Connect
+                  related concepts automatically as you write</h4>
+               <h4 class="chekchircle-display_flex margin-bottom"><img src="assets/CheckCircle.png" alt="">Build lasting
+                  knowledge through reflection prompts</h4>
+               <h4 class="chekchircle-display_flex margin-bottom"><img src="assets/CheckCircle.png" alt="">Find anything
+                  instantly with semantic search</h4>
+            </div>
+         </div>
+      </div>
+   </section>
+
 
 </body>
+
 </html>
