created early acces section this is the challange part i will do

--- a/index.html
+++ b/index.html
@@ -128,6 +128,20 @@
          </div>
       </div>
    </section>
+   <!-- brain section ended -->
+   <!-- early acces section -->
+   <section class="container ">
+      <div class="main-container">
+         <h1 class="acces-title">Ready to think more clearly?</h1>
+         <p class="font_size">Join thousands of learners who are building their personal knowledge vaults. <br>Start free, no credit card
+            required.</p>
+         <div class="button-container">
+            <button class="acces-button">Get Early Access<img src="assets/ArrowRight.png" alt=""></button>
+         </div>
+         <p class="font_size">Free during early access • No credit card needed</p>
+      </div>
+
+   </section>
 
 
 </body>
