--- a/index.html
+++ b/index.html
@@ -133,7 +133,8 @@
    <section class="container ">
       <div class="main-container">
          <h1 class="acces-title">Ready to think more clearly?</h1>
-         <p class="font_size">Join thousands of learners who are building their personal knowledge vaults. <br>Start free, no credit card
+         <p class="font_size">Join thousands of learners who are building their personal knowledge vaults. <br>Start
+            free, no credit card
             required.</p>
          <div class="button-container">
             <button class="acces-button">Get Early Access<img src="assets/ArrowRight.png" alt=""></button>
@@ -142,7 +143,26 @@
       </div>
 
    </section>
+   <!-- early acceds section ended -->
+   <!-- fotter section started -->
+   <footer class="footer-section">
+      <div class="fotter-contaner container">
+         <div><img src="assets/logo-footer.png" alt=""></div>
+         <div>
+            <h3>Social Links</h3>
+            <div class="Social-icon">
+               <div><i class="fa-brands fa-x-twitter"></i></div>
+               <div><i class="fa-brands fa-linkedin"></i></div>
+               <div><i class="fa-brands fa-facebook"></i></div>
+            </div>
 
+         </div>
+
+      </div>
+      <div>
+         <p class="copy-right font_size">&copy; 2026 Personal Knowledge Vault. All rights reserved.</p>
+      </div>
+   </footer>
 
 </body>
 
