change the early acces button text color

--- a/index.html
+++ b/index.html
@@ -163,6 +163,7 @@
          <p class="copy-right font_size">&copy; 2026 Personal Knowledge Vault. All rights reserved.</p>
       </div>
    </footer>
+   <!-- footer section ended -->
 
 </body>
 
